src/test/ui/nll/mir_check_cast_reify.stderr
error: lifetime may not live long enough
  --> $DIR/mir_check_cast_reify.rs:37:5
   |
LL | fn bar<'a>(x: &'a u32) -> &'static u32 {
   |        -- lifetime `'a` defined here
...
LL |     f(x)
   |     ^^^^ returning this value requires that `'a` must outlive `'static`

error: aborting due to previous error

